[*] 优化